* Fixed memory leak when using "Bucket" tool (bgola`)
* Reduced memory usage in resize functions (barbolo)

10

* Bug #3558 update spanish translations

9

8

* Translation are working, directory structure modified (nathalia.sautchuk)
* Many improvements in palettes; size now is only choosen inside tool palette (alexandre)
* User may choose 'line shape' in rainbow effect (alexandre)
* Added greek and arabic translations (nathalia.sautchuk)
* Bug #3320 fixed; Default tab now is 'Tools' (alexandre)
* Bug #3172 fixed. Paint now start with 'Pencil' tool selected (alexandre)
* Writting tool improved (alexandre)
* Bug #2147 fixed (alexandre)
* toolbar use button copy only when something is selected (pekayatt)
* New move_selection function, now past and import are really nice (pekayatt)
* Sel functions improved, import and past now select the image, and can_undo fixed for first undo(pekayatt)
* Fixed bug with brush and selection, and you can not undo when file is resumed in Journal(pekayatt)

7

* Build as Paint not oficina
* Clean up NEWS file - please use setup.py release to do releases

6

* Added 'Clear' button (alexandre)
* Modifications on selection and gelection bounds (pekayatt)
* Added rainbow effect (andremossinato)
* Side number for regular polygon can be choosen (alexandre)
* New shape available: Heart (andremossinato)

4

* Now paste and copy are integrated to Sugar (pekayatt)
* Colors now are choosen from a ColorButton. Selected color is shown, not its name (alexandre)
* Adjust in Undo/Redo functions, now we have a limit (on 10 times) (pekayatt)
* New past and copy funcions, improvements on selection func (pekayatt)
* Fixed bug with pixmap_temp
* New FILL fuction, linked to C module (pekayatt)
* Color list in Area.py is not used anymore. Toolbox.py now passes a gdk.Color (nathalia.sautchuk, alexandre)
* Fixed Cursors errors (nathalia.sautchuk)
* Fixed Image load bug, now enableUndo is working with it (pekayatt)
* Added COPYING (alexandre)