@@ -1,3 +1,4 @@
+* Bug #3749 fixed; resuming from Journal is working again (alexandre)
 * Fixed memory leak when using "Bucket" tool (bgola`)
 * Reduced memory usage in resize functions (barbolo)
 
